# datahon-kaggle

./: .env.example  .gitignore  01_eda.ipynb  02_baseline.ipynb  03_gnn_text.ipynb  03_gnn_text_v2.ipynb  03_gnn_text_v3.ipynb  04_experiments.ipynb  05_submission.ipynb  Makefile  main.py  pyproject.toml
dataset-task2/: task2.md  wikispeedia_adj.pkl
src/: __init__.py  model.py  model_v2.py  train.py
task1/: README.md
task1/notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_gnn_text.ipynb  03_gnn_text_v2.ipynb  03_gnn_text_v3.ipynb  04_experiments.ipynb  05_submission.ipynb  06_evaluate.ipynb
task1/src/: model_v3.py
task2/notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_deep_learning.ipynb  04_deep_learning.ipynb  04_training.ipynb  05_training.ipynb
task2/src/: __init__.py  dl_model.py  graph.py  model.py  train.py
