[project]
name = "datathon-kaggle-task"
version = "0.1.0"
description = "Multimodal traffic speed prediction with GNN + event text"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "xgboost>=2.1",
    "transformers>=4.45",
    "peft>=0.12",
    "accelerate>=1.0",
    "pytesseract>=0.3.13",
    "opencv-python>=5.0.0.93",
    "easyocr>=1.7.2",
    "seaborn>=0.13.2",
    "wikipedia2vec>=2.0.0",
    "gensim>=4.4.0",
]
